--- a/style.css
+++ b/style.css
@@ -39,7 +39,6 @@ body{
     color: #cea35f;
     border-bottom: solid 1px rgba(255, 255, 255, 1);
 }
-
  
 
 .btn {
@@ -115,8 +114,17 @@ h2, .news h3{
     text-transform: uppercase;
 }
 
+.news-card-composition{
+    font-size: 14px;
+    line-height: 24px;
+}
+
 .benefits ul{
     list-style: none;
+}
+
+.benefits{
+    background-color: #ffcb78;
 }
 
 .benefit-item{
@@ -134,4 +142,42 @@ h2, .news h3{
     line-height: 30px;
     font-weight: bold;
     text-transform: uppercase;
+}
+
+.history-title{
+    font-family: "Arial", sans-serif;
+    color: black;
+    font-size: 16px;
+    line-height: 30px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.history-source{
+    font-size: 16px;
+    line-height: 30px;
+    font-style: italic;
+    color: #444444;
+    font-weight: normal;
+    text-transform: none;
+}
+
+.history-source a{
+    color: #8d745a;
+}
+
+.history-source a:hover{
+    color: rgba(141, 116, 90, 0.3);
+}
+
+.history-source a:active{
+    color: #a38b70;
+}
+
+.history img{
+    border-radius: 5px;
+}
+
+.press{
+background-color: #ede5d8;
 }
